--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>RDE Systems</title>
-        <!-- <meta name="viewport" content="width-device-width, initial-scale=1.0"> -->
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
 		<!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" /> -->
         
         <link href="css/bootstrap.min.css" rel="stylesheet">
