--- a/survey.html
+++ b/survey.html
@@ -90,7 +90,7 @@
 
             <div class="row">
                 <div class="col-md-8"></div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-offset-5">
                     <div class="panel panel-default">
                         <div id="div-panel-md4-body" class="panel-body">
 
